[project]
name = "livekit-plugins-aliyun"
dynamic = ["version"]
description = "LiveKit Agent Plugins for Alibaba Cloud"
readme = "README.md"
authors = [
    { name = "itqdtgcom", email = "it@qdtg.com" }
]
keywords = ["webrtc", "realtime", "audio", "video", "livekit"]
requires-python = ">=3.9"
dependencies = [
    "livekit-agents>=1.2.15",
    "osc-data>=0.2.2",
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "livekit/plugins/aliyun/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]
